--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,6 +1,6 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "images\\6144787-removebg-preview.png"
+  image_path: "assets\\icons\\map_icon.png"
 
   android: "launcher_icon"
   # image_path_android: "assets/icon/icon.png"
