--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   geolocator: ^14.0.1
+  google_maps_flutter: ^2.12.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
